crates/plotnik-lib/tests/02-parser/recovery_unexpected/multiline_garbage_recovery.txt
(a
^^^
b)
==== diagnostics ====
error: unexpected token
 --> query.ptk:2:1
  |
2 | ^^^
  | ^^^
  |
help: expected a child node, or `)` to close

error: node kinds must be parenthesized
 --> query.ptk:3:1
  |
3 | b)
  | ^
  |
help: wrap in parentheses
  |
3 - b)
3 + (b))
  |
